tests/a/tests/integrity/fail/loop/for.0.stderr
error: expected {root}{root}, found {root}{c,root}
 --> tests/integrity/fail/loop/for.0.rs:8:14
  |
8 |         x += 6;
  |              ^
